Rework for service URL lookups.